# dashboard_bevy

./: Cargo.toml  README.md
assets/shaders/: bounding_box.frag  knob.frag
crates/dashboard_derive/: Cargo.toml
crates/dashboard_derive/src/: lib.rs
src/: backup.rs  lib.rs  main.rs
src/macro_template/: macro_template.rs  mod.rs
src/util/: util.rs
