[package]
name = "dashboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", git = "https://github.com/bevyengine/bevy", rev="6a8a8c9d21f32e0e46623db9438813b009f9e014", default-features = true }
bevy_reflect = "0.5.0"
serde = { version = "1", features = ["derive"] }
strum = "0.22.0"
strum_macros = "0.22"

dashboard_derive = { path = "crates/dashboard_derive", version = "0.1.0" }
enum_dispatch = "0.3.7"
bimap = "0.6.1"
num-traits = "0.2.14"
num = "0.4.0"
rand = "0.8.4"
